ANTLR/output/FunctionalLanguageParser.java
// $ANTLR 3.4 /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g 2013-01-24 17:22:48


import java.util.HashMap;
import java.util.LinkedList;
import com.al333z.typechecking.*;
import com.al333z.type.*;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class FunctionalLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASS", "BOOL", "COMMA", "COMMENT", "DEF", "DOT", "ELSE", "EMPTY", "EQUAL", "FALSE", "FIRST", "GREATER", "ID", "IF", "INT", "LESS", "LISTOF", "LPAR", "LSPAR", "MINUS", "NOT", "NUMBER", "OR", "PLUS", "PRINT", "REST", "RPAR", "RSPAR", "SEMIC", "THEN", "TRUE", "WHITESP"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ASS=5;
    public static final int BOOL=6;
    public static final int COMMA=7;
    public static final int COMMENT=8;
    public static final int DEF=9;
    public static final int DOT=10;
    public static final int ELSE=11;
    public static final int EMPTY=12;
    public static final int EQUAL=13;
    public static final int FALSE=14;
    public static final int FIRST=15;
    public static final int GREATER=16;
    public static final int ID=17;
    public static final int IF=18;
    public static final int INT=19;
    public static final int LESS=20;
    public static final int LISTOF=21;
    public static final int LPAR=22;
    public static final int LSPAR=23;
    public static final int MINUS=24;
    public static final int NOT=25;
    public static final int NUMBER=26;
    public static final int OR=27;
    public static final int PLUS=28;
    public static final int PRINT=29;
    public static final int REST=30;
    public static final int RPAR=31;
    public static final int RSPAR=32;
    public static final int SEMIC=33;
    public static final int THEN=34;
    public static final int TRUE=35;
    public static final int WHITESP=36;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public FunctionalLanguageParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public FunctionalLanguageParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return FunctionalLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g"; }



    private int staticData = 0;
    private int labelCounter = 0;
    private int parameterCounter = 0;
    private HashMap symTable = new HashMap();
    private HashMap typeTable = new HashMap();
    private HashMap localSymTable = new HashMap();
    private HashMap localTypeTable = new HashMap();

    private HashMap functionParametersTypeTable = new HashMap();
    private HashMap functionReturnValues = new HashMap();

    private LinkedList<Checker> funcParametersTypeList = new LinkedList<Checker>();
    private LinkedList<Type> parametersTypeList = new LinkedList<Type>();

    private final static int TRUEVALUE = 1;
    private final static int FALSEVALUE = 0;
    private final static int EMPTYVALUE = -1;

    private String functionCode = new String();



    public static class prog_return extends ParserRuleReturnScope {
        public String code;
        public Checker typecheck;
    };


    // $ANTLR start "prog"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:38:1: prog returns [String code, Checker typecheck] : c= command SEMIC (d= command SEMIC )* ;
    public final FunctionalLanguageParser.prog_return prog() throws RecognitionException {
        FunctionalLanguageParser.prog_return retval = new FunctionalLanguageParser.prog_return();
        retval.start = input.LT(1);


        FunctionalLanguageParser.command_return c =null;

        FunctionalLanguageParser.command_return d =null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:39:10: (c= command SEMIC (d= command SEMIC )* )
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:39:12: c= command SEMIC (d= command SEMIC )*
            {
            pushFollow(FOLLOW_command_in_prog39);
            c=command();

            state._fsp--;


            match(input,SEMIC,FOLLOW_SEMIC_in_prog41); 


                    	
                    	retval.code = (c!=null?c.code:null)+"\n";
            	retval.typecheck = new CommandChecker((c!=null?c.typecheck:null));
            	
                    	

            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:47:3: (d= command SEMIC )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEF||LA1_0==PRINT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:47:4: d= command SEMIC
            	    {
            	    pushFollow(FOLLOW_command_in_prog70);
            	    d=command();

            	    state._fsp--;


            	    match(input,SEMIC,FOLLOW_SEMIC_in_prog72); 


            	    	 
            	    	 retval.code += (d!=null?d.code:null)+"\n"; 
            	    	retval.typecheck = new ProgramChecker(retval.typecheck, (d!=null?d.typecheck:null));
            	    	 
            	    	 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


             retval.code+="\thalt\n"+functionCode;

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"



    // $ANTLR start "type"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:56:1: type returns [Type typevalue] : (p= primitiveType |c= compoundType );
    public final Type type() throws RecognitionException {
        Type typevalue = null;


        Type p =null;

        Type c =null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:57:2: (p= primitiveType |c= compoundType )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==BOOL||LA2_0==INT) ) {
                alt2=1;
            }
            else if ( (LA2_0==LISTOF) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:57:4: p= primitiveType
                    {
                    pushFollow(FOLLOW_primitiveType_in_type103);
                    p=primitiveType();

                    state._fsp--;


                     typevalue = p; 

                    }
                    break;
                case 2 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:58:4: c= compoundType
                    {
                    pushFollow(FOLLOW_compoundType_in_type112);
                    c=compoundType();

                    state._fsp--;


                    typevalue = c; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return typevalue;
    }
    // $ANTLR end "type"



    // $ANTLR start "primitiveType"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:61:1: primitiveType returns [Type typevalue] : ( INT | BOOL );
    public final Type primitiveType() throws RecognitionException {
        Type typevalue = null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:62:2: ( INT | BOOL )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INT) ) {
                alt3=1;
            }
            else if ( (LA3_0==BOOL) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:62:4: INT
                    {
                    match(input,INT,FOLLOW_INT_in_primitiveType128); 

                    typevalue = new IntType(); 

                    }
                    break;
                case 2 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:63:4: BOOL
                    {
                    match(input,BOOL,FOLLOW_BOOL_in_primitiveType136); 

                    typevalue = new BoolType(); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return typevalue;
    }
    // $ANTLR end "primitiveType"



    // $ANTLR start "compoundType"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:66:1: compoundType returns [Type typevalue] : ( LISTOF LSPAR t= primitiveType RSPAR ) ;
    public final Type compoundType() throws RecognitionException {
        Type typevalue = null;


        Type t =null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:67:2: ( ( LISTOF LSPAR t= primitiveType RSPAR ) )
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:67:4: ( LISTOF LSPAR t= primitiveType RSPAR )
            {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:67:4: ( LISTOF LSPAR t= primitiveType RSPAR )
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:67:5: LISTOF LSPAR t= primitiveType RSPAR
            {
            match(input,LISTOF,FOLLOW_LISTOF_in_compoundType155); 

            match(input,LSPAR,FOLLOW_LSPAR_in_compoundType157); 

            pushFollow(FOLLOW_primitiveType_in_compoundType161);
            t=primitiveType();

            state._fsp--;


            match(input,RSPAR,FOLLOW_RSPAR_in_compoundType163); 

            }


            typevalue = new ListType(t); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return typevalue;
    }
    // $ANTLR end "compoundType"


    public static class command_return extends ParserRuleReturnScope {
        public String code;
        public Checker typecheck;
    };


    // $ANTLR start "command"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:70:1: command returns [String code, Checker typecheck] : ( DEF t= type i= ID ( ASS e= expr | LPAR (t= type j= ID ( COMMA t= type k= ID )* )? RPAR ASS e= expr ) | PRINT e= expr );
    public final FunctionalLanguageParser.command_return command() throws RecognitionException {
        FunctionalLanguageParser.command_return retval = new FunctionalLanguageParser.command_return();
        retval.start = input.LT(1);


        Token i=null;
        Token j=null;
        Token k=null;
        Type t =null;

        FunctionalLanguageParser.expr_return e =null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:71:2: ( DEF t= type i= ID ( ASS e= expr | LPAR (t= type j= ID ( COMMA t= type k= ID )* )? RPAR ASS e= expr ) | PRINT e= expr )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==DEF) ) {
                alt7=1;
            }
            else if ( (LA7_0==PRINT) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:71:4: DEF t= type i= ID ( ASS e= expr | LPAR (t= type j= ID ( COMMA t= type k= ID )* )? RPAR ASS e= expr )
                    {
                    match(input,DEF,FOLLOW_DEF_in_command184); 

                    pushFollow(FOLLOW_type_in_command188);
                    t=type();

                    state._fsp--;


                    i=(Token)match(input,ID,FOLLOW_ID_in_command192); 

                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:72:12: ( ASS e= expr | LPAR (t= type j= ID ( COMMA t= type k= ID )* )? RPAR ASS e= expr )
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==ASS) ) {
                        alt6=1;
                    }
                    else if ( (LA6_0==LPAR) ) {
                        alt6=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 0, input);

                        throw nvae;

                    }
                    switch (alt6) {
                        case 1 :
                            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:72:14: ASS e= expr
                            {
                            match(input,ASS,FOLLOW_ASS_in_command207); 

                            pushFollow(FOLLOW_expr_in_command211);
                            e=expr();

                            state._fsp--;



                                      	
                                        symTable.put((i!=null?i.getText():null),new Integer(staticData));
                                        typeTable.put((i!=null?i.getText():null), t);
                                        retval.code = (e!=null?e.code:null)+"\tpush "+(staticData++)+"\n"+"\tsw\n";
                                        
                                        retval.typecheck = new ExprAssignmentChecker(t , (e!=null?e.typecheck:null));
                                        
                                        

                            }
                            break;
                        case 2 :
                            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:83:14: LPAR (t= type j= ID ( COMMA t= type k= ID )* )? RPAR ASS e= expr
                            {
                            match(input,LPAR,FOLLOW_LPAR_in_command253); 

                            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:83:19: (t= type j= ID ( COMMA t= type k= ID )* )?
                            int alt5=2;
                            int LA5_0 = input.LA(1);

                            if ( (LA5_0==BOOL||LA5_0==INT||LA5_0==LISTOF) ) {
                                alt5=1;
                            }
                            switch (alt5) {
                                case 1 :
                                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:84:13: t= type j= ID ( COMMA t= type k= ID )*
                                    {

                                               	
                                               	// save func return values
                                               	functionReturnValues.put((i!=null?i.getText():null), t);
                                               	
                                               	

                                    pushFollow(FOLLOW_type_in_command299);
                                    t=type();

                                    state._fsp--;


                                    j=(Token)match(input,ID,FOLLOW_ID_in_command315); 


                                                localSymTable.put((j!=null?j.getText():null),new Integer(parameterCounter++));
                                      
                                                localTypeTable.put((j!=null?j.getText():null),t);
                                                
                                                //  save first param type
                                           	parametersTypeList.add(t);
                                                
                                                

                                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:102:13: ( COMMA t= type k= ID )*
                                    loop4:
                                    do {
                                        int alt4=2;
                                        int LA4_0 = input.LA(1);

                                        if ( (LA4_0==COMMA) ) {
                                            alt4=1;
                                        }


                                        switch (alt4) {
                                    	case 1 :
                                    	    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:102:14: COMMA t= type k= ID
                                    	    {
                                    	    match(input,COMMA,FOLLOW_COMMA_in_command345); 

                                    	    pushFollow(FOLLOW_type_in_command349);
                                    	    t=type();

                                    	    state._fsp--;


                                    	    k=(Token)match(input,ID,FOLLOW_ID_in_command353); 


                                    	                localSymTable.put((k!=null?k.getText():null),new Integer(parameterCounter++));
                                    	           
                                    	                localTypeTable.put((k!=null?k.getText():null), t);
                                    	                
                                    	           	parametersTypeList.add(t);
                                    	                
                                    	                

                                    	    }
                                    	    break;

                                    	default :
                                    	    break loop4;
                                        }
                                    } while (true);


                                    }
                                    break;

                            }


                            match(input,RPAR,FOLLOW_RPAR_in_command388); 


                                        	// save parameters type list
                                        	functionParametersTypeTable.put((i!=null?i.getText():null), parametersTypeList);
                                        	
                                        	System.out.println("saved functionParametersTypeTable id: "+(i!=null?i.getText():null));
                                        	System.out.println("saved functionParametersTypeTable size: "+parametersTypeList.size());
                                        	System.out.println("saved functionParametersTypeTable: "+parametersTypeList.toString());
                                        	
                                        	parametersTypeList = new LinkedList<Type>();
                                        

                            match(input,ASS,FOLLOW_ASS_in_command417); 

                            pushFollow(FOLLOW_expr_in_command421);
                            e=expr();

                            state._fsp--;



                                        String removePar = "";
                                        for(int c=0; c<parameterCounter; c++)
                                        	removePar+="\tpop\n";
                                     	functionCode+=(i!=null?i.getText():null)+":\n"+
                                                        "\tlsp\n"+
                                                        "\tsfp\n"+
                                                        "\tlra\n"+
                                                        (e!=null?e.code:null)+
                                                        "\tsrv\n"+
                                                        "\tsra\n"+
                                                        removePar+  
                                                        "\tsfp\n"+
                                                        "\tlrv\n"+
                                                        "\tjra\n";
                                   	retval.code ="";
                                        parameterCounter=0;
                                        localSymTable=new HashMap();
                                        
                                        localTypeTable = new HashMap();
                                        
                                        retval.typecheck = new ExprChecker((e!=null?e.typecheck:null));
                                                   
                                     	

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:148:12: PRINT e= expr
                    {
                    match(input,PRINT,FOLLOW_PRINT_in_command463); 

                    pushFollow(FOLLOW_expr_in_command467);
                    e=expr();

                    state._fsp--;



                            	
                            	retval.code = (e!=null?e.code:null)+"\tprint\n";
                            	
                            	retval.typecheck = new PrintChecker((e!=null?e.typecheck:null));
                            	
                            	

                    }
                    break;

            }
            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "command"


    public static class expr_return extends ParserRuleReturnScope {
        public String code;
        public Checker typecheck;
    };


    // $ANTLR start "expr"
    // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:159:1: expr returns [String code, Checker typecheck] : t= term ( PLUS t2= term | MINUS t2= term | OR t2= term )* ;
    public final FunctionalLanguageParser.expr_return expr() throws RecognitionException {
        FunctionalLanguageParser.expr_return retval = new FunctionalLanguageParser.expr_return();
        retval.start = input.LT(1);


        FunctionalLanguageParser.term_return t =null;

        FunctionalLanguageParser.term_return t2 =null;


        try {
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:160:2: (t= term ( PLUS t2= term | MINUS t2= term | OR t2= term )* )
            // /Users/ale/Dropbox/Dev/LPMCProject/ANTLR/FunctionalLanguage.g:160:4: t= term ( PLUS t2= term | MINUS t2= term | OR t2= term )*
            {
            pushFollow(FOLLOW_term_in_expr526);
            t=term();

            state._fsp--;



            	
            	retval.code = (t!=null?t.code:null);
            	retval.typecheck = new TermChecker((t!=null?t.typecheck:null));
            	
            	
